2004-06-07  Lars Clausen  <lars@raeder.dk>

	* lib/widgets.c (dia_toggle_button_new_with_images): Remove
	debugging info.

	* lib/diagramdata.c (new_layer): Initialize connectibility.

	* app/display.c (ddisplay_obj_render): 
	* app/diagram.c (diagram_find_closest_connectionpoint): Take
	connectibility into account.

	* app/layer_dialog.h (struct _DiaLayerWidget): 
	* app/layer_dialog.c:
	Connectible toggle updates, now works fairly well.

	* app/select.c (select_transitive_callback): Make sure we're only
	selecting in the same layer.

2004-06-04  Lars Clausen  <lars@raeder.dk>

	* app/pixmaps/Makefile.am: Also install connectable images.
	
	* app/layer_dialog.c (dia_layer_update_from_layer): Initially set
	layer toggles from layer itself.  Also update diagram correctly
	for visibility.  Still need updates for connectivity behaviour.

2004-06-03  Hans Breuer  <hans@breuer.org>

	* plug-ins/wpg/wpg.c(draw_image) : take rowstride into account

	* lib/diagdkrenderer.c(set_linejoin) : actually set
	join_style not cap_style
	(set_dashes): with the correct number of dashes

2004-06-03  Lars Clausen  <lars@raeder.dk>

	* app/modify_tool.c (click_select_object): 
	* lib/text.c (text_set_cursor): 
	* app/disp_callbacks.c (ddisplay_canvas_events): Turn off text stuff.

2004-05-31  Hans Breuer  <hans@breuer.org>

	* lib/object_defaults.c : don't 'failed to load external 
	entity "NULL"' when the defaults file does not exist, 
	bug #108764 [again: somehow this got lost]

	* app/paginate_gdiprint.cpp : don guess the WMF export 
	filter used for printing but find it by unique name.
	Also update for export_func renaming
	* plug-ins/wmf/wmf.cpp plug-ins/cairo/diacairo.c
	provide some unique names

	* app/commands.c app/disp_callbacks.c app/paginate_psprint.c 
	  app/select.c : fix bug #140789 by always checking if there
	still is an active diagram before accessing it

	* app/defaults.c app/properties.c : user visible string should 